# naive-coreterra

./: .gitignore  README.md  run.sh
backend/: pyproject.toml  start.sh
backend/app/: __init__.py  main.py
backend/app/middleware/: auth.py
backend/app/models/: gamification.py  project.py  task.py  user.py
backend/app/routers/: auth.py  contexts.py  gamification.py  projects.py  reports.py  tasks.py  teams.py  users.py
backend/app/services/: auth_service.py  data_service.py
backend/data/: mock_achievements.json  mock_contexts.json  mock_data.json  mock_items.json  mock_projects.json  mock_report.json  mock_tasks.json  mock_teams.json  mock_users.json
docs/: Coreterra 产品需求文档 (PRD) v1.0.md  coreterra_prototype.html  mock_data.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/features/: DragDropZone.tsx  FloatingText.tsx  ProductivityRadar.tsx
frontend/src/components/layout/: GlobalHeader.tsx  MobileNav.tsx  NavigationSidebar.tsx
frontend/src/components/ui/: button.tsx
frontend/src/context/: AppContext.tsx  AuthContext.tsx
frontend/src/hooks/: useDragAndDrop.ts
frontend/src/lib/: api.ts  dateUtils.ts
frontend/src/pages/: AchievementsPage.tsx  CalendarPage.tsx  ClarifyPage.tsx  EngagePage.tsx  HomePage.tsx  InboxPage.tsx  LoginPage.tsx  NotificationPage.tsx  OrganizePage.tsx  ProfilePage.tsx  QuickCapturePage.tsx  ReviewPage.tsx  ShopPage.tsx  TaskDetailsPage.tsx  TeamPage.tsx
frontend/src/types/: index.ts
