[project]
name = "coreterra-backend"
version = "0.1.0"
description = "Coreterra backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.104.1",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.3.0",
    "pydantic==2.5.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.6",
    "uvicorn[standard]==0.24.0",
]
